--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!doctype html>
+
 <head>
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<title>glTF Viewer</title>
+	<title>MTI Piano Viewer</title>
 	<meta
 		name="viewport"
 		content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
@@ -15,10 +16,12 @@
 	<link href="https://fonts.googleapis.com/css?family=Raleway:300,400" rel="stylesheet" />
 	<script defer type="module" src="src/app.js"></script>
 </head>
+
 <body>
 	<header>
-		<h1><a href="/">glTF Viewer</a></h1>
+		<h1><a href="/">MTI Piano Viewer</a></h1>
 	</header>
+
 	<main class="wrap">
 		<div class="dropzone">
 			<div class="placeholder">
