--- a/index.html
+++ b/index.html
@@ -25,23 +25,9 @@
 	<main class="wrap">
 		<div class="dropzone">
 			<div class="placeholder">
-				<p>Drag glTF 2.0 file or folder here</p>
-			</div>
-			<div class="upload-btn">
-				<input type="file" name="file-input[]" id="file-input" multiple="" />
-				<label for="file-input">
-					<svg
-						xmlns="http://www.w3.org/2000/svg"
-						width="20"
-						height="17"
-						viewBox="0 0 20 17"
-					>
-						<path
-							d="M10 0l-5.2 4.9h3.3v5.1h3.8v-5.1h3.3l-5.2-4.9zm9.3 11.5l-3.2-2.1h-2l3.4 2.6h-3.5c-.1 0-.2.1-.2.1l-.8 2.3h-6l-.8-2.2c-.1-.1-.1-.2-.2-.2h-3.6l3.4-2.6h-2l-3.2 2.1c-.4.3-.7 1-.6 1.5l.6 3.1c.1.5.7.9 1.2.9h16.3c.6 0 1.1-.4 1.3-.9l.6-3.1c.1-.5-.2-1.2-.7-1.5z"
-						></path>
-					</svg>
-					<span>Choose file</span>
-				</label>
+				<p>Choose a song to get started</p>
+				<button onclick="chooseSong('homesweethome')">Home, Sweet Home</button>
+				<button onclick="chooseSong('lachasse')">La Chasse (The Hunt)</button>
 			</div>
 		</div>
 		<div class="spinner"></div>
@@ -69,3 +55,16 @@
 
 	</main>
 </body>
+
+<script>
+	function chooseSong(songName) {
+		const rootPath = 'https://mti-demos.s3.amazonaws.com/bienan-piano/assets';
+
+		// Update the audio source
+		const audio = document.getElementById('piano-audio')
+		audio.src = `${rootPath}/audio/${songName}.mp3`;
+
+		// View the model
+		window.VIEWER.app.view(`/models/${songName}.glb`, rootPath, new Map())
+	}
+</script>
