Define footer inline rather than as component

--- a/index.html
+++ b/index.html
@@ -54,6 +54,28 @@
 		<!-- /Scrub Bar -->
 
 	</main>
+
+	<footer>
+		<a class="item" target="_blank" href="https://mti.it.northwestern.edu/">
+			Northwestern Media & Technology Innovation
+		</a>
+		<span class="separator" aria-hidden="true">|</span>
+		<a class="item" target="_blank" href="https://threejs.org/">
+			three.js<span id="footer-three-js-version"></span>
+		</a>
+		<span class="separator" aria-hidden="true">|</span>
+		<a
+			class="item"
+			target="_blank"
+			href="https://github.com/northwestern-mti/bienen-piano-viewer/issues/new"
+		>
+			help & feedback
+		</a>
+		<span class="separator" aria-hidden="true">|</span>
+		<a class="item" target="_blank" href="https://github.com/northwestern-mti/bienen-piano-viewer">
+			github
+		</a>
+	</footer>
 </body>
 
 <script>
