--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
 	<link rel="shortcut icon" href="/favicon.ico" />
 	<link rel="stylesheet" href="style.css" />
 	<link href="https://fonts.googleapis.com/css?family=Raleway:300,400" rel="stylesheet" />
+
+	<script type="importmap">
+		{
+			"imports": {
+				"three":         "https://cdn.jsdelivr.net/npm/three@0.162.0/build/three.module.js",
+				"three/addons/": "https://cdn.jsdelivr.net/npm/three@0.162.0/examples/jsm/",
+				"lil-gui":       "https://cdn.jsdelivr.net/npm/lil-gui@0.19.2/dist/lil-gui.esm.js"
+			}
+		}
+	</script>
 	<script defer type="module" src="src/app.js"></script>
 </head>
 
