--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 		name="viewport"
 		content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
 	/>
-	<meta name="author" content="Don McCurdy" />
-	<meta name="description" content="Drag-and-drop preview tool for glTF 2.0 3D models." />
-	<link rel="canonical" href="https://gltf-viewer.donmccurdy.com/" />
+	<meta name="author" content="Northwestern University, Media & Technology Innovation" />
+	<meta name="description" content="View motion-capture piano recordings in 3D." />
+
 	<link rel="shortcut icon" href="/favicon.ico" />
 	<link rel="stylesheet" href="style.css" />
 	<link href="https://fonts.googleapis.com/css?family=Raleway:300,400" rel="stylesheet" />
