Import assets from local path

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
 <script>
 	function chooseSong(songName) {
-		const rootPath = 'https://mti-demos.s3.amazonaws.com/bienan-piano/assets';
+		const rootPath = '/assets';
 
 		// Update the audio source
 		const audio = document.getElementById('piano-audio')
